# requestfile

./: .gitignore  CONTRIBUTING.md  OVERVIEW.md  README.md  SYNTAX.md  pyproject.toml
.github/workflows/: python-package.yml
requestfile/: ast.py  formatting.py  parser.py  printing.py
requestfile/builder/: __init__.py  builder.py  context.py  filters.py  request.py  resource_loader.py
requestfile/cli/: __init__.py  parse.py  send.py
requestfile/cli/convert_from/: __init__.py  curl.py
requestfile/cli/convert_to/: __init__.py  curl.py
requestfile/ext/: requests.py
requestfile/utils/: interpolation.py  registry.py
samples/: dev-get  get  get-with-arguments  kitchensink  post-file  post-form  post-form-heredoc  post-with-api-key
tests/: test_interpolation.py
tests/test_parsing/: test_parse_requestfile.py  test_parsing_rules.py  test_string_unquote.py
