[project]
name = "requestfile"
version = "0.1.0"
description = "Human-friendly HTTP requests as plain text files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp[aiohttp]>=3.13.3",
    "click>=8.3.1",
    "lark>=1.3.1",
    "multidict>=6.7.1",
    "requests-toolbelt[requests]>=1.0.0",
    "requests[requests]>=2.32.5",
    "rich>=14.3.2",
]
license = "Apache-2.0"
authors = [
    {name = "Sam Santi", email = "redshadow@hackzine.org"},
]

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/rshk/requestfile"
Issues = "https://github.com/rshk/requestfile/issues"
# Changelog = ""

[project.scripts]
requestfile = "requestfile.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "requestfile"
module-root = ""

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "pdbpp>=0.12.0.post1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
